# bdk

./: .clippy.toml  .editorconfig  .envrc  .gitignore  .travis.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.1.48.0.toml  Cargo.toml  DEVELOPMENT_CYCLE.md  LICENSE  NIX.md  Nix.md  README.md  SECURITY.md  build-msrv-crates.sh  clippy.toml  codecov.yaml  cog.toml  flake.nix  justfile  llms.txt  run_blockchain_tests.sh  rustfmt.toml  tarpaulin.toml
bdk_test_client/: Cargo.toml
bdk_test_client/src/: lib.rs
core/electrum_client/: Cargo.toml
core/electrum_client/examples/: plaintext.rs  ssl.rs  tor.rs
core/electrum_client/src/: batch.rs  client.rs  lib.rs  stream.rs  test_stream.rs  types.rs
core/electrum_client/test_data/: batch_script_list_unspent.in  batch_script_list_unspent.out  block_header.in  block_header.out  block_headers.in  block_headers.out  estimate_fee.in  estimate_fee.out  relay_fee.in  relay_fee.out  script_get_balance.in  script_get_balance.out  script_get_history.in  script_get_history.out  script_list_unspent.in  script_list_unspent.out  server_features_simple.in  server_features_simple.out  transaction_broadcast.in  transaction_broadcast.out  transaction_get.in  transaction_get.out  transaction_get_merkle.in  transaction_get_merkle.out
core/lib/: Cargo.toml
core/lib/examples/: parse_descriptor.rs
core/lib/src/: error.rs  lib.rs  psbt.rs  signer.rs  types.rs
core/lib/src/database/: keyvalue.rs  (+1 more)
crates/bdk/: Cargo.toml  README.md
crates/bdk/examples/: compiler.rs  mnemonic_to_descriptors.rs  policy.rs
crates/bdk/src/: error.rs  lib.rs  types.rs
crates/bdk/tests/: common.rs  psbt.rs  wallet.rs
crates/bitcoind_rpc/: CHANGELOG.md  Cargo.toml  README.md
crates/bitcoind_rpc/examples/: README.md  bip158.rs  filter_iter.rs  filter_iter_v2.rs
crates/bitcoind_rpc/src/: bip158.rs  lib.rs
crates/bitcoind_rpc/tests/: bip158.rs  test_emitter.rs  test_filter_iter.rs
crates/chain/: CHANGELOG.md  Cargo.toml  README.md
crates/chain/benches/: canonicalization.rs  indexer.rs
crates/chain/keychain_migrations/: 00_create_keychain_txout_table.sql
crates/chain/local_chain_migrations/: 00_create_local_chain_table.sql
crates/chain/src/: ancestor_package.rs  balance.rs  canonical.rs  canonical_ancestors.rs  canonical_iter.rs  canonical_task.rs  canonical_view.rs  canonical_view_task.rs  chain_data.rs  chain_graph.rs  chain_oracle.rs  changeset.rs  descriptor_ext.rs  example_utils.rs  indexed_tx_graph.rs  indexer.rs  keychain.rs  lib.rs  local_chain.rs  persist.rs  pow_chain.rs  remote_chain.rs  rusqlite_impl.rs  sparse_chain.rs  spk_client.rs  spk_iter.rs  spk_txout_index.rs  sqlite.rs  sqlx_impl.rs  tracker.rs  tx_data_traits.rs  tx_graph.rs  unconfirmed_oracle.rs
crates/chain/tests/: test_ancestor_package.rs  test_canonical_ancestors.rs  test_canonical_view.rs  test_canonical_view_mtp.rs  test_canonical_view_task.rs  test_chain_graph.rs  test_indexed_tx_graph.rs  test_keychain_tracker.rs  test_keychain_txout_index.rs  test_local_chain.rs  test_rusqlite_impl.rs  test_sparse_chain.rs  test_spk_txout_index.rs  test_tx_graph.rs  test_tx_graph_conflicts.rs
crates/chain/tx_graph_migrations/: 00_create_tx_graph_tables.sql
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  log.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/core/benches/: checkpoint_skiplist.rs
crates/core/src/: block_id.rs  block_queries.rs  chain_query.rs  chain_task.rs  checkpoint.rs  checkpoint_entry.rs  lib.rs  merge.rs  spk_client.rs  tx_update.rs
crates/core/tests/: common.rs  test_checkpoint.rs  test_checkpoint_displacement.rs  test_checkpoint_skiplist.rs  test_merge.rs  test_spk_client.rs  test_tx_update.rs
crates/electrum/: CHANGELOG.md  Cargo.toml  README.md
crates/electrum/benches/: test_sync.rs
crates/electrum/src/: bdk_builder.rs  bdk_electrum_client.rs  electrum_ext.rs  electrum_sync.rs  lib.rs  v2.rs
crates/electrum/tests/: test_api_compatibility.rs  test_electrum.rs  test_electrum_scanning.rs
crates/esplora/: CHANGELOG.md  Cargo.toml  README.md
crates/esplora/src/: async_ext.rs  blocking_ext.rs  lib.rs
crates/esplora/tests/: async_ext.rs  blocking_ext.rs  test_esplora_scanning.rs
crates/file_store/: CHANGELOG.md  Cargo.toml  README.md
crates/file_store/src/: Indexed_file_store.rs  entry_iter.rs  file_store.rs  keychain_store.rs  lib.rs  store.rs
crates/file_store/tests/: test_file_store.rs
crates/hwi/: Cargo.toml  README.md
crates/hwi/src/: lib.rs  signer.rs
crates/persist/: Cargo.toml  README.md
crates/persist/src/: changeset.rs  lib.rs  persist.rs
crates/redb/: Cargo.toml
crates/redb/src/: lib.rs
crates/rpcwallet/: Cargo.toml
crates/rpcwallet/src/: lib.rs
crates/sqlite/: Cargo.toml  README.md
crates/sqlite/schema/: schema_0.sql
crates/sqlite/src/: lib.rs  schema.rs  store.rs
crates/sqlite_store/: Cargo.toml  README.md
crates/sqlite_store/src/: lib.rs  store.rs
crates/testenv/: CHANGELOG.md  Cargo.toml  README.md
crates/testenv/src/: lib.rs  persist_test_utils.rs  tx_template.rs  utils.rs
crates/wallet/: CHANGELOG.md  Cargo.toml  README.md
crates/wallet/examples/: compiler.rs  descriptor_with_plan.rs  mnemonic_to_descriptors.rs  policy.rs
crates/wallet/src/: bip322.rs  lib.rs  test_utils.rs  types.rs
crates/wallet/tests/: add_foreign_utxo.rs  build_fee_bump.rs  common.rs  create_tx_plan.rs  psbt.rs  wallet.rs
crates/waterfalls/: Cargo.toml
crates/waterfalls/src/: lib.rs
example-crates/example_cbf/: Cargo.toml
example-crates/example_cbf/src/: main.rs
example-crates/example_cli/: Cargo.toml
example-crates/example_cli/src/: lib.rs
example-crates/example_electrum/: Cargo.toml
example-crates/example_electrum/src/: main.rs
example-crates/example_esplora/: Cargo.toml
example-crates/example_migrate_wallet/: Cargo.toml
example-crates/example_rpc/: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
testutils/: Cargo.toml
testutils-macros/: Cargo.toml
testutils-macros/src/: lib.rs
testutils/src/: blockchain_tests.rs  lib.rs
(+339 files in other folders)
