[workspace]
resolver = "2"
members = [
    "crates/chain",
    "crates/core",
    "crates/file_store",
    "crates/electrum",
    "crates/esplora",
    "crates/bitcoind_rpc",
    "crates/testenv",
    "examples/example_cli",
    "examples/example_electrum",
    "examples/example_esplora",
    "examples/example_bitcoind_rpc_polling",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]

[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

# FIXME: should be removed once the new API lands in electrum-client and a new release is done.
[patch.crates-io]
electrum-client = { git = "https://github.com/oleonardolima/rust-electrum-client.git", branch = "feat/add-batch-transaction-get-merkle" }
