[package]
name = "magical-macros"
version = "0.1.0-beta.1"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["parsing", "full"] }
proc-macro2 = "1.0"
quote = "1.0"

[features]
debug = ["syn/extra-traits"]

[lib]
proc-macro = true
