[package]
name = "magical-bitcoin-wallet"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Alekos Filini <alekos.filini@gmail.com>"]

[dependencies]
log = "^0.4"
bitcoin = { version = "0.23", features = ["use-serde"] }
miniscript = { version = "0.12" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
base64 = "^0.11"

# Optional dependencies
sled = { version = "0.31.0", optional = true }

[features]
default = ["sled"]
key-value-db = ["sled"]

[dev-dependencies]
lazy_static = "1.4.0"
