[package]
name = "bdk_chain"
version = "0.21.1"
edition = "2021"
rust-version = "1.63"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_chain"
description = "Collection of core structures for Bitcoin Dev Kit."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bitcoin = { version = "0.32.0", default-features = false }
bdk_core = { path = "../core", version = "0.4.1", default-features = false }
serde = { version = "1", optional = true, features = ["derive", "rc"] }
miniscript = { version = "12.3.1", optional = true, default-features = false }

# Feature dependencies
rusqlite = { version = "0.31.0", features = ["bundled"], optional = true }

[dev-dependencies]
rand = "0.8"
proptest = "1.2.0"
bdk_testenv = { path = "../testenv", default-features = false }
criterion = { version = "0.2" }
serde_json = "1.0"
serde = { version = "1", features = ["derive", "rc"] }
bdk_chain = { path = ".", features = ["serde"] }

[features]
default = ["std", "miniscript"]
std = ["bitcoin/std", "miniscript?/std", "bdk_core/std"]
serde = ["dep:serde", "bitcoin/serde", "miniscript?/serde", "bdk_core/serde"]
hashbrown = ["bdk_core/hashbrown"]
rusqlite = ["std", "dep:rusqlite", "serde"]

[[bench]]
name = "canonicalization"
harness = false
