[package]
name = "bdk_core"
version = "0.6.2"
edition = "2021"
rust-version = "1.85.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_core"
description = "Collection of core structures for Bitcoin Dev Kit."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitcoin = { version = "0.32", default-features = false }
serde = { version = "1", optional = true, features = ["derive", "rc"] }
hashbrown = { version = "0.14.5", optional = true, default-features = false, features = ["ahash", "inline-more"] }

[features]
default = ["std"]
std = ["bitcoin/std"]
serde = ["dep:serde", "bitcoin/serde", "hashbrown?/serde"]

[dev-dependencies]
bdk_chain = { path = "../chain" }
bdk_testenv = { path = "../testenv", default-features = false }
