[package]
name = "bdk_electrum"
version = "0.23.2"
edition = "2021"
rust-version = "1.85.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_electrum"
description = "Fetch data from electrum in the form BDK accepts"
license = "MIT OR Apache-2.0"
readme = "README.md"

[lints]
workspace = true

[dependencies]
bdk_core = { path = "../core", version = "0.6.1" }
electrum-client = { version = "0.24.0", features = [ "proxy" ], default-features = false }


[dev-dependencies]

bdk_chain = { path = "../chain" }


criterion = { version = "0.7" }

[features]
default = ["use-rustls"]
use-rustls = ["electrum-client/use-rustls"]
use-rustls-ring = ["electrum-client/use-rustls-ring"]
use-openssl = ["electrum-client/use-openssl"]

[[test]]
name = "test_electrum"
required-features = ["use-rustls"]

[[bench]]
name = "test_sync"
harness = false
