[package]
name = "bdk_esplora"
version = "0.22.1"
edition = "2021"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_esplora"
description = "Fetch data from esplora in the form that accepts"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bdk_core = { path = "../core", version = "0.6.1", default-features = false }
esplora-client = { version = "0.12.1", default-features = false }
async-trait = { version = "0.1.66", optional = true }
futures = { version = "0.3.26", optional = true }
serde_json = { version = "1.0", features = ["alloc"] }

[dev-dependencies]
esplora-client = { version = "0.12.0" }
bdk_chain = { path = "../chain" }
bdk_testenv = { path = "../testenv" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = ["std", "async-https", "blocking-https"]
std = ["bdk_core/std"]
tokio = ["esplora-client/tokio"]
async = ["async-trait", "futures", "esplora-client/async"]
async-https = ["async", "esplora-client/async-https"]
async-https-rustls = ["async", "esplora-client/async-https-rustls"]
async-https-native = ["async", "esplora-client/async-https-native"]
blocking = ["esplora-client/blocking"]
blocking-https = ["blocking", "esplora-client/blocking-https"]
blocking-https-rustls = ["blocking", "esplora-client/blocking-https-rustls"]
blocking-https-native = ["blocking", "esplora-client/blocking-https-native"]

[[test]]
name = "blocking_ext"
required-features = ["blocking"]

[[test]]
name = "async_ext"
required-features = ["async"]
