[package]
name = "bdk_file_store"
version = "0.19.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_file_store"
description = "A simple append-only flat file database for persisting bdk_chain data."
keywords = ["bitcoin", "persist", "persistence", "bdk", "file"]
authors = ["Bitcoin Dev Kit Developers"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
bdk_core = { path = "../core", version = "0.5.0", features = ["serde"]}
bincode = { version = "1" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
