[package]
name = "bdk_hwi"
version = "0.3.0"
edition = "2021"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
description = "Utilities to use bdk with hardware wallets"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bdk_wallet = { path = "../wallet", version = "1.0.0-alpha.13" }
hwi = { version = "0.9.0", features = [ "miniscript"] }

[dev-dependencies]
bdk_wallet = { path = "../wallet", version = "1.0.0-alpha.13", features = ["test-util"] }
